--- a/storefront/templates/storefront/partials/mainstore/create_order.html
+++ b/storefront/templates/storefront/partials/mainstore/create_order.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Place Order | {{ product.name }}</title>
+    <meta name="robots" content="noindex, nofollow" />
     {% include "storefront/theme_css.html" %}
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
